[package]
name = "cixrs"
version = "0.1.0"
authors = ["Brendon Scheinman <bscheinman@gmail.com>"]
build = "build.rs"

[lib]
name = "libcix"
path = "src/libcix/lib.rs"

[[bin]]
name = "heap_test"
path = "src/test/heap_test.rs"

[[bin]]
name = "book_test"
path = "src/test/book_test.rs"

[dependencies]
capnp = "0.8"
time = "0.1"
uuid = { version = "0.3", features = ["v4"] }

[build-dependencies]
capnpc = "*"
